--- a/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/state-of-css/yml/en-US.yml
@@ -238,9 +238,9 @@ translations:
   # Units & Selectors
   ###########################################################################
 
-  - key: features.units
+  - key: features_others.units
     t: Units
-  - key: features.units.description
+  - key: features_others.units.description
     t: Which of these CSS units have you used?
 
   - key: options.units.px
@@ -268,9 +268,9 @@ translations:
   - key: options.units.in
     t: in
 
-  - key: features.pseudo_elements
+  - key: features_others.pseudo_elements
     t: Pseudo Elements
-  - key: features.pseudo_elements.description
+  - key: features_others.pseudo_elements.description
     t: Which of these CSS selectors have you used?
 
   - key: options.pseudo_elements.before
@@ -290,7 +290,7 @@ translations:
   - key: options.pseudo_elements.backdrop
     t: '::backdrop'
 
-  - key: features.combinators
+  - key: features_others.combinators
     t: Combinators
 
   - key: options.combinators.descendant
@@ -302,7 +302,7 @@ translations:
   - key: options.combinators.subsequent_sibling
     t: div ~ div (subsequent sibling)
 
-  - key: features.tree_document_structure
+  - key: features_others.tree_document_structure
     t: Tree / Document Structure
 
   - key: options.tree_document_structure.root
@@ -340,7 +340,7 @@ translations:
   - key: options.tree_document_structure.has
     t: :has()
 
-  - key: features.attributes
+  - key: features_others.attributes
     t: Attributes
   
   - key: options.attributes.presence
@@ -356,7 +356,7 @@ translations:
   - key: options.attributes.contains_substring
     t: div[foo*="bar"] (Contains substring)
 
-  - key: features.links_urls
+  - key: features_others.links_urls
     t: Links/URLs
 
   - key: options.links_urls.any_link
@@ -368,7 +368,7 @@ translations:
   - key: options.links_urls.target
     t: :target
 
-  - key: features.interaction
+  - key: features_others.interaction
     t: Interaction
   
   - key: options.interaction.hover
@@ -382,7 +382,7 @@ translations:
   - key: options.interaction.focus_visible
     t: :focus-visible
 
-  - key: features.form_controls
+  - key: features_others.form_controls
     t: Form Controls
 
   - key: options.form_controls.enabled_disabled
@@ -405,13 +405,6 @@ translations:
     t: :in-range and :out-of-range
   - key: options.form_controls.required_optional
     t: :required and :optional
-
-  ###########################################################################
-  # Tools
-  ###########################################################################
-
-  - key: tools.atomiccss
-    t: Utility-First/Atomic CSS
 
   ###########################################################################
   # Environments
