--- a/packages/stateofjs/lib/i18n/common/yml/model.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/model.yml
@@ -513,49 +513,49 @@ translations:
   # Other Tools
   ###########################################################################
 
-  - key: other_tools.text_editors # TODO
+  - key: tools_other.text_editors # TODO
     t: Text Editors
-  - key: other_tools.text_editors.description # TODO
+  - key: tools_other.text_editors.description # TODO
     t: Which text editor(s) do you regularly use?
-  - key: other_tools.text_editors.others # TODO
+  - key: tools_other.text_editors.others # TODO
     t: Other Text Editors
-  - key: other_tools.text_editors.others.description # TODO
+  - key: tools_other.text_editors.others.description # TODO
     t: Other answers (freeform field).
 
-  - key: other_tools.utilities # TODO
+  - key: tools_other.utilities # TODO
     t: Utilities
-  - key: other_tools.utilities.description # TODO
+  - key: tools_other.utilities.description # TODO
     t: Which utility libraries do you regularly use?
-  - key: other_tools.utilities.others # TODO
+  - key: tools_other.utilities.others # TODO
     t: Other Utilities
-  - key: other_tools.utilities.others.description # TODO
+  - key: tools_other.utilities.others.description # TODO
     t: Other utilities (freeform field).
 
-  - key: other_tools.browsers # TODO
+  - key: tools_other.browsers # TODO
     t: Browsers
-  - key: other_tools.browsers.description # TODO
+  - key: tools_other.browsers.description # TODO
     t: Which browser(s) do you primarily work in during initial development?
-  - key: other_tools.browsers.others # TODO
+  - key: tools_other.browsers.others # TODO
     t: Other Browsers
-  - key: other_tools.browsers.others.description # TODO
+  - key: tools_other.browsers.others.description # TODO
     t: Other answers (freeform field).
 
-  - key: other_tools.build_tools # TODO
+  - key: tools_other.build_tools # TODO
     t: Build Tools
-  - key: other_tools.build_tools.description # TODO
+  - key: tools_other.build_tools.description # TODO
     t: Which build tools do you use?
-  - key: other_tools.build_tools.others # TODO
+  - key: tools_other.build_tools.others # TODO
     t: Other Build Tools
-  - key: other_tools.build_tools.others.description # TODO
+  - key: tools_other.build_tools.others.description # TODO
     t: Other answers (freeform field).
 
-  - key: other_tools.non_js_languages # TODO
+  - key: tools_other.non_js_languages # TODO
     t: Non-JavaScript Languages
-  - key: other_tools.non_js_languages.description # TODO
+  - key: tools_other.non_js_languages.description # TODO
     t: Which other programming languages do you use?
-  - key: other_tools.non_js_languages.others # TODO
+  - key: tools_other.non_js_languages.others # TODO
     t: Other Languages
-  - key: other_tools.non_js_languages.others.description # TODO
+  - key: tools_other.non_js_languages.others.description # TODO
     t: Other answers (freeform field).
 
 ###########################################################################
