--- a/packages/stateofjs/lib/i18n/common/yml/en-US.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/en-US.yml
@@ -413,30 +413,26 @@ translations:
   - key: options.gender.prefer_not_to_say
     t: Prefer not to say
 
-  # Skin Tone
+  # Race & Ethnicity
 
-  - key: options.skin_tone.0
-    t: 🧑🏻‍🦲
-  - key: options.skin_tone.1
-    t: 🧑🏼‍🦲
-  - key: options.skin_tone.2
-    t: 🧑🏽‍🦲
-  - key: options.skin_tone.3
-    t: 🧑🏾‍🦲
-  - key: options.skin_tone.4
-    t: 🧑🏿‍🦲
-
-  # image fallback
-  - key: options.skin_tone.0
-    t: <img src="/emojis/icons8-bald-man-light-skin-tone-100.png" alt="Light skin tone emoji"/>
-  - key: options.skin_tone.1
-    t: <img src="/emojis/icons8-bald-man-medium-light-skin-tone-100.png" alt="Medium-light skin tone emoji"/>
-  - key: options.skin_tone.2
-    t: <img src="/emojis/icons8-bald-man-medium-skin-tone-100.png" alt="Medium skin tone emoji"/>
-  - key: options.skin_tone.3
-    t: <img src="/emojis/icons8-bald-man-medium-dark-skin-tone-100.png" alt="Medium skin tone emoji"/>
-  - key: options.skin_tone.4
-    t: <img src="/emojis/icons8-bald-man-dark-skin-tone-100.png" alt="Dark skin tone emoji"/>
+  - key: options.race_ethnicity.white_european
+    t: White or of European descent
+  - key: options.race_ethnicity.south_asian
+    t: South Asian
+  - key: options.race_ethnicity.hispanic_latin
+    t: Hispanic or Latino/Latina
+  - key: options.race_ethnicity.east_asian
+    t: East Asian
+  - key: options.race_ethnicity.middle_eastern
+    t: Middle Eastern
+  - key: options.race_ethnicity.black_african
+    t: Black or of African descent
+  - key: options.race_ethnicity.multiracial
+    t: Multiracial
+  - key: options.race_ethnicity.biracial
+    t: Biracial
+  - key: options.race_ethnicity.native_american_islander_australian
+    t: Native American, Pacific Islander, or Indigenous Australian
 
   ###########################################################################
   # Tools
@@ -506,16 +502,8 @@ translations:
     t: Gender
 
   # skin tone/appearance
-  - key: user_info.skin_tone
-    t: Appearance
-  - key: user_info.skin_tone.description
-    t: >
-        Which emoji do you feel represents you best? <br/><br/>
-
-        Note: We are experimenting with a new question format in order to 
-        try and better capture the demographic makeup of our respondents. 
-        <a href="https://github.com/StateOfJS/StateOfCSS-2020/issues/5" target="_blank">Leave us your feedback</a>
-        on GitHub. 
+  - key: user_info.race_ethnicity
+    t: Race & Ethnicity
 
   # other info
   - key: user_info.how_did_user_find_out_about_the_survey
