--- a/packages/stateofjs/lib/i18n/common/yml/it-IT.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/it-IT.yml
@@ -402,19 +402,27 @@ translations:
     t: Non-Binario/Terzo Sesso
   - key: options.gender.prefer_not_to_say
     t: Preferisco non dirlo
+    
+  # Race & Ethnicity
 
-  # Skin Tone
-
-  - key: options.skin_tone.0
-    t: 🧑🏻‍🦲
-  - key: options.skin_tone.1
-    t: 🧑🏼‍🦲
-  - key: options.skin_tone.2
-    t: 🧑🏽‍🦲
-  - key: options.skin_tone.3
-    t: 🧑🏾‍🦲
-  - key: options.skin_tone.4
-    t: 🧑🏿‍🦲
+  - key: options.race_ethnicity.white_european # TODO
+    t: White or of European descent
+  - key: options.race_ethnicity.south_asian # TODO
+    t: South Asian
+  - key: options.race_ethnicity.hispanic_latin # TODO
+    t: Hispanic or Latino/Latina
+  - key: options.race_ethnicity.east_asian # TODO
+    t: East Asian
+  - key: options.race_ethnicity.middle_eastern # TODO
+    t: Middle Eastern
+  - key: options.race_ethnicity.black_african # TODO
+    t: Black or of African descent
+  - key: options.race_ethnicity.multiracial # TODO
+    t: Multiracial
+  - key: options.race_ethnicity.biracial # TODO
+    t: Biracial
+  - key: options.race_ethnicity.native_american_islander_australian # TODO
+    t: Native American, Pacific Islander, or Indigenous Australian
 
   ###########################################################################
   # Tools
