--- a/packages/stateofjs/lib/i18n/common/yml/sv-SE.yml
+++ b/packages/stateofjs/lib/i18n/common/yml/sv-SE.yml
@@ -360,7 +360,6 @@ translations:
   - key: options.javascript_proficiency.2
     t: Jobbar med existerande frontend-kodbaser som använder moderna frameworks (React, Vue, etc.)
   - key: options.javascript_proficiency.3
-    t:
     t: Skapar arkitektur för hela frontend-kodbaser från scratch
   - key: options.javascript_proficiency.4
     t: Hanterar avancerade frontend-patterns (state management, data loading, etc.)
@@ -414,18 +413,26 @@ translations:
   - key: options.gender.prefer_not_to_say
     t: Föredrar att inte säga
 
-  # Skin Tone
+  # Race & Ethnicity
 
-  - key: options.skin_tone.0
-    t: 🧑🏻‍🦲
-  - key: options.skin_tone.1
-    t: 🧑🏼‍🦲
-  - key: options.skin_tone.2
-    t: 🧑🏽‍🦲
-  - key: options.skin_tone.3
-    t: 🧑🏾‍🦲
-  - key: options.skin_tone.4
-    t: 🧑🏿‍🦲
+  - key: white_european # TODO
+    t: White or of European descent
+  - key: south_asian # TODO
+    t: South Asian
+  - key: hispanic_latin # TODO
+    t: Hispanic or Latino/Latina
+  - key: east_asian # TODO
+    t: East Asian
+  - key: middle_eastern # TODO
+    t: Middle Eastern
+  - key: black_african # TODO
+    t: Black or of African descent
+  - key: multiracial # TODO
+    t: Multiracial
+  - key: biracial # TODO
+    t: Biracial
+  - key: native_american_islander_australian # TODO
+    t: Native American, Pacific Islander, or Indigenous Australian
 
   # image fallback
   - key: options.skin_tone.0
